--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,72 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="ion-text-center">
     <ion-title>
-      Blank
+      <img style="height: 40px;" src="http://cdn.shopify.com/s/files/1/0290/2648/4312/files/UnaBotilleriaMas_Logo4_1200x630.png?v=1614374781" alt="">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-row class="ion-text-center">
+    <ion-col>
+      <ion-note>BotiSata</ion-note>
+    </ion-col>
+  </ion-row>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-row>
+    <ion-col>
+      <ion-card-content>
+        <img src="" alt="">
+      </ion-card-content>
+    </ion-col>
+  </ion-row>
+
+  <ion-grid >
+    <ion-row>
+      <ion-list>
+        <ion-item>
+          <ion-label position="stacked">Usuario</ion-label>
+          <ion-input type="text" placeholder="Nombre de Usuario"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Contraseña</ion-label>
+          <ion-input type="password" placeholder="Contraseña"></ion-input>
+        </ion-item>
+
+      </ion-list>
+    </ion-row>
+
+
+    <ion-row>
+      <ion-col >
+        <ion-button expand="full"
+        [routerLink]="['/catalogo']"
+        >
+        <ion-icon name="beer-outline" slot="end"></ion-icon>
+          Ingresar
+        </ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-button expand="full" fill="clear" color="warning"
+        [routerLink]="['/registro']"
+        >
+          ¿No tienes una cuenta?
+        </ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button expand="full" fill="clear"color="danger"
+        [routerLink]="['/recupera-contra']"
+        >
+          ¿Olvidó su contraseña ?
+        </ion-button>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+
 </ion-content>
